# stutter

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  PKGBUILD  README.md  rustfmt.toml  stutter.service
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: CONTRIBUTING.md
pkg/: PKGBUILD  stutter.service
src/: config.rs  error.rs  hypr.rs  main.rs  scheduler.rs
src/backend/: hyprland.rs  mod.rs  niri.rs
