[package]
name = "stutter"
version = "0.1.0"
edition = "2024"
authors = ["Kleshzz"]
description = "Focus-aware process priority daemon for Hyprland"
keywords = ["hyprland", "wayland", "daemon", "priority", "nice"]
categories = ["os", "command-line-utilities"]
exclude = [".github", "*.service"]
license = "MIT"
repository = "https://github.com/Kleshzz/stutter"
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "2"
toml = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

unwrap_used = "warn"
expect_used = "warn"
cloned_instead_of_copied = "warn"
mut_mut = "warn"
